--- a/components/Auth.module.css
+++ b/components/Auth.module.css
@@ -6,6 +6,22 @@
     justify-content: center;
     padding: 4rem 1rem;
     background-color: var(--color-background);
+    position: relative;
+    overflow: hidden;
+}
+
+.container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url('/images/beach-background.jpg');
+    background-size: cover;
+    background-position: center;
+    opacity: 0.5;
+    z-index: 0;
 }
 
 .card {
@@ -16,6 +32,8 @@
     width: 100%;
     max-width: 480px;
     text-align: center;
+    position: relative;
+    z-index: 1;
 }
 
 .title {
