--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,5 +1,5 @@
 .hero {
-    background: linear-gradient(rgba(26, 77, 46, 0.7), rgba(26, 77, 46, 0.6)), url('/images/hero-bg.jpg') no-repeat center center/cover;
+    background: linear-gradient(rgba(26, 77, 46, 0.5), rgba(26, 77, 46, 0.5)), url('/images/new-hero-bg.jpg') no-repeat center center/cover;
     color: white;
     padding: 8rem 0;
     text-align: center;
